--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -92,6 +92,7 @@ jobs:
         run: |
           New-Item -ItemType Directory -Force -Path dist | Out-Null
           go build -trimpath -ldflags="-H=windowsgui -s -w" -o dist/goclip-windows-amd64.exe .
+          Copy-Item dist/goclip-windows-amd64.exe dist/goclip-${Env:APP_VERSION}-windows-amd64.exe
 
       - name: Package zip
         shell: pwsh
@@ -104,6 +105,7 @@ jobs:
           name: goclip-${{ env.APP_VERSION }}-windows-amd64
           path: |
             dist/goclip-windows-amd64.exe
+            dist/goclip-${{ env.APP_VERSION }}-windows-amd64.exe
             dist/goclip-${{ env.APP_VERSION }}-windows-amd64.zip
           if-no-files-found: error
 
@@ -113,6 +115,7 @@ jobs:
         with:
           artifacts: |
             dist/goclip-windows-amd64.exe
+            dist/goclip-${{ env.APP_VERSION }}-windows-amd64.exe
             dist/goclip-${{ env.APP_VERSION }}-windows-amd64.zip
           tag: ${{ github.ref_name }}
           name: ${{ github.ref_name }}
