--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,12 @@ dependency-track-generate-go:
   stage: dependency-track-generate
   tags:
     - fis
-  #only:
-    #- tags
-    #- main
-  image: golang:latest
+  only:
+    - tags
+    - main
+  image:
+    name: golang:latest
+    pull_policy: if-not-present
   script:
     # Set proxy configuration
     - export http_proxy="$HTTP_PROXY"
@@ -29,10 +31,12 @@ dependency-track-upload:
   stage: dependency-track-upload
   tags:
     - fis
-  #only:
-    #- tags
-    #- main
-  image: golang:latest
+  only:
+    - tags
+    - main
+  image:
+    name: golang:latest
+    pull_policy: if-not-present
   script:
     - export no_proxy="$DEPENDENCY_TRACK_HOSTNAME"
     # Download and execute the Dependency-Track push script
