--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,6 @@ dependency-track-upload:
     - export no_proxy="$DEPENDENCY_TRACK_HOSTNAME"
     # Download and execute the Dependency-Track push script
     - curl --cacert <(echo "$DEPENDENCY_TRACK_ROOT_CA") -s https://$DEPENDENCY_TRACK_HOSTNAME/v3/dependency-track.sh |
-      bash -s -- push -c "$CUSTOMER" -d "$RESPONSIBLE_DEPARTMENT" -f "$CONTACT_FIS" -k "$CONTACT_CUSTOMER" -b "sbom-go.json" -t "$TAGS"
+      bash -s -- push -c "$CUSTOMER" -d "$RESPONSIBLE_DEPARTMENT" -f "$CONTACT_FIS" -k "$CONTACT_CUSTOMER" -b "sbom-go.json" -t "$TAGS" -v "$CI_COMMIT_TAG"
   dependencies:
     - dependency-track-generate-go
