--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.24.x'
-          chache: true
+          cache: true
 
       - name: Cache MSYS2
         uses: actions/cache@v4
