--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -112,7 +112,7 @@ jobs:
         shell: pwsh
         run: |
           New-Item -ItemType Directory -Force -Path dist | Out-Null
-          go build -trimpath -ldflags="-H=windowsgui -s -w" -o dist/goclip-windows-amd64.exe .
+          go build -v -trimpath -ldflags="-H=windowsgui -s -w" -o dist/goclip-windows-amd64.exe .
           Copy-Item dist/goclip-windows-amd64.exe dist/goclip-${Env:APP_VERSION}-windows-amd64.exe
 
       - name: Package zip
