--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install MSYS2 (MinGW-w64) for CGO
         uses: msys2/setup-msys2@v2
         with:
-          update: true
+          update: false
           msystem: MINGW64
           install: >-
             mingw-w64-x86_64-gcc
