--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Install MSYS2 (MinGW-w64) for CGO
         uses: msys2/setup-msys2@v2
         with:
+          release: false
           update: false
           msystem: MINGW64
           install: >-
